--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
 
     <color name="bright_sun">#fcfcb7</color>
     <color name="blue_sky">#1e7ac7</color>
-    <color name="sunset_sky">#ec8100</color>
+    <color name="sunset_sky">#b03060</color>
     <color name="night_sky">#05192e</color>
     <color name="sea">#224869</color>
 
